--- a/src/app/templates/login.html
+++ b/src/app/templates/login.html
@@ -1,5 +1,5 @@
-<div class="row">
-	<form ng-controller='loginCtrl' class='col s12'>
+<div ng-controller='loginCtrl' class="row" ng-show='!auth.status.isLoggedIn'>
+	<form class='col s12'>
     <div class="row">
         <div class="input-field col s12">
           <input id="name" type="text" ng-model='user.name' class="validate">
