--- a/src/app/templates/login.html
+++ b/src/app/templates/login.html
@@ -1,4 +1,5 @@
 <div ng-controller='loginCtrl' class="row" ng-show='!auth.status.isLoggedIn'>
+  <h3>Login</h3>
 	<form class='col s12'>
     <div class="row">
         <div class="input-field col s12">
