--- a/src/app/templates/message.html
+++ b/src/app/templates/message.html
@@ -2,7 +2,7 @@
   <div class="col s12 m6">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
-        <span class="card-title">{{message.sender}}</span>
+        <span class="card-title">{{message.sender.name}}</span>
         <p>{{message.message}}</p>
       </div>
       <div class="card-action">
