--- a/src/app/templates/message.html
+++ b/src/app/templates/message.html
@@ -1,17 +1,12 @@
-<div class="row" ng-repeat='message in messages'>
-  <div class="col s12 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">{{message.sender.name}}</span>
+<div class="row" ng-cloak>
+  <md-content>
+    <md-list-item class="md-3-line" ng-repeat-start='message in messages'>
+      <div class="md-list-item-text" layout="column">
+        <h3>{{message.sender.name}}</h3>
+        <h4>{{message.sentOn | date:'MM/dd/yyyy hh:mma'}}</h4>
         <p>{{message.message}}</p>
       </div>
-      <div class="card-action">
-        <a href="#">Reply</a>
-        <a href="#">Delete</a>
-        <div class='right-align white-text'>
-          {{message.sentOn | date:'MM/dd/yyyy @ hh:mma'}}
-        </div>
-      </div>
-    </div>
-  </div>
+    </md-list-item>
+      <md-divider ng-repeat-end></md-divider>
+  </md-content>
 </div>
