--- a/src/app/templates/message.html
+++ b/src/app/templates/message.html
@@ -7,6 +7,7 @@
         <p>{{message.message}}</p>
       </div>
     </md-list-item>
-      <md-divider ng-repeat-end></md-divider>
+    <md-button class="md-secondary">Reply</md-button>
+    <md-divider ng-repeat-end></md-divider>
   </md-content>
 </div>
