--- a/src/app/templates/contact.html
+++ b/src/app/templates/contact.html
@@ -9,6 +9,9 @@
       </div>
     </li>
   </ul>
+  <md-button class="md-raised" aria-label="Add contact">
+    <span>Add</span>
+  </md-button>
 </div>
 
 
