--- a/src/app/templates/login.html
+++ b/src/app/templates/login.html
@@ -1,5 +1,8 @@
-<div ng-controller='loginCtrl' class="row">
-  <md-content flex layout-padding>
+<div ng-controller='loginCtrl'>
+  <md-content>
+    <md-subheader class="md-no-sticky">
+      Login / Register
+    </md-subheader>
     <div id="login" class="col s12" ng-show='!auth.status.isLoggedIn'>
       <form class='col s12'>
         <md-content layout-gt-sm="row" layout-padding>
