--- a/src/app/templates/message.html
+++ b/src/app/templates/message.html
@@ -1,5 +1,8 @@
 <div class="row" ng-cloak>
   <md-content>
+    <md-subheader class="md-no-sticky">
+      Messages
+    </md-subheader>
     <md-list-item class="md-3-line" ng-repeat-start='message in messages'>
       <div class="md-list-item-text" layout="column">
         <h3>{{message.sender.name}}</h3>
