--- a/src/app/templates/sendmessage.html
+++ b/src/app/templates/sendmessage.html
@@ -1,9 +1,9 @@
 <md-content>
-  <md-header class="md-no-sticky md-display-1">
+  <md-subheader class="md-no-sticky md-display-1">
       {{data.receiver}}
   </md-subheader>
   <md-list-item class="md-3-line" ng-repeat='message in data.messages'>
-    <div class="md-list-item-text" ng-class='{"msg-sent": message.sent, "msg-received": !message.sent}'>
+    <div class="md-accent md-list-item-text" ng-class='{"msg-sent": message.sent, "msg-received": !message.sent}'>
       <h3></h3>
       <p>
         {{message.message}}
