--- a/src/app/templates/sendmessage.html
+++ b/src/app/templates/sendmessage.html
@@ -10,4 +10,13 @@
       </p>
     </div>
   </md-list-item>
+  <md-content class='bleh reply-input'>
+    <div layout="row" layout-align="start center">
+      <md-input-container class="md-block reply-message">
+        <label>Message</label>
+        <textarea ng-model="reply.text" rows="3"></textarea>
+      </md-input-container>
+      <md-button class='md-raised md-accent'>Send</md-button>
+    </div>
+  </md-content>
 </md-content>
