change style for messages

--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -8,6 +8,7 @@
   padding: 20px;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
+  box-shadow: 5px 5px 2px #c0c0c0;
 }
 
 .msg-received {
@@ -19,6 +20,7 @@
   padding: 20px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
+  box-shadow: 5px 5px 2px #c0c0c0;
 }
 
 .bleh {
