look and feel of send message page

--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -11,6 +11,10 @@
   box-shadow: 5px 5px 2px #c0c0c0;
 }
 
+.msg-page {
+  padding-bottom: 100px;
+}
+
 .msg-received {
   text-align: left;
   position: absolute;
