--- a/src/app/templates/sendmessage.html
+++ b/src/app/templates/sendmessage.html
@@ -1,15 +1,15 @@
-<md-content ng-controller='sendMessageCtrl'>
+<md-content class='msg-page' ng-controller='sendMessageCtrl'>
   <md-subheader class="md-no-sticky md-display-1">
       {{data.receiver.name}}
   </md-subheader>
-  <md-list-item class="md-3-line" ng-repeat='message in data.messages'>
-    <div class="md-accent md-list-item-text" ng-class='{"msg-received": message.sender._id === data.receiver._id, "msg-sent": message.receiver._id === data.receiver._id}'>
-      <h3></h3>
-      <p>
-        {{message.message}}
-      </p>
-    </div>
-  </md-list-item>
+    <md-list-item class="md-3-line" ng-repeat='message in data.messages | limitTo:-5'>
+      <div class="md-accent md-list-item-text" ng-class='{"msg-received": message.sender._id === data.receiver._id, "msg-sent": message.receiver._id === data.receiver._id}'>
+        <h3></h3>
+        <p>
+          {{message.message}}
+        </p>
+      </div>
+    </md-list-item>
   <md-content class='bleh reply-input'>
     <div layout="row" layout-align="start center">
       <md-input-container class="md-block reply-message">
