clicking on reply in messages shows the users messages

--- a/src/app/templates/message.html
+++ b/src/app/templates/message.html
@@ -10,7 +10,7 @@
         <p>{{message.message}}</p>
       </div>
     </md-list-item>
-    <md-button class="md-secondary">Reply</md-button>
+    <md-button class="md-secondary" ng-click='reply(message)'>Reply</md-button>
     <md-divider ng-repeat-end></md-divider>
   </md-content>
 </div>
