design: change look and feel of messages

--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -3,10 +3,10 @@
   position: absolute;
   right: 0px;
   width: 80%;
-  background-color: #3F51B5;
-  color: white;
+  background-color: rgb(255,215,64);
+  color: black;
   padding: 20px;
-  border-top-left-radius: 20px;
+  border-top-left-radius: 10px;
   border-bottom-left-radius: 20px;
   box-shadow: 2px 2px 1px #c0c0c0;
 }
@@ -21,10 +21,10 @@
   position: absolute;
   left: 0px;
   width: 80%;
-  background-color: #FFCA28;
+  background-color: rgb(255,215,64);
   padding: 20px;
   border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-right-radius: 10px;
   box-shadow: 2px 2px 1px #c0c0c0;
 }
 
