feat: show a button "Show more" to display more messages from a user. This will increase the number of displayed messages by 5

--- a/src/app/templates/sendmessage.html
+++ b/src/app/templates/sendmessage.html
@@ -1,12 +1,15 @@
 <md-content class='msg-page' ng-controller='sendMessageCtrl'>
-    <md-list-item class="md-3-line" ng-repeat='message in data.messages | limitTo:-5'>
-      <div class="md-accent md-list-item-text" ng-class='{"msg-received": message.sender._id === data.receiver._id, "msg-sent": message.receiver._id === data.receiver._id}'>
-        <h3></h3>
-        <p>
-          {{message.message}}
-        </p>
-      </div>
-    </md-list-item>
+  <div layout="row" layout-align="center center">
+    <md-button ng-click='showMore()'>Show more</md-button>
+  </div>
+  <md-list-item class="md-3-line" ng-repeat='message in data.messages | limitTo:messageLimit'>
+    <div class="md-accent md-list-item-text" ng-class='{"msg-received": message.sender._id === data.receiver._id, "msg-sent": message.receiver._id === data.receiver._id}'>
+      <h3></h3>
+      <p>
+        {{message.message}}
+      </p>
+    </div>
+  </md-list-item>
   <md-content class='bleh reply-input'>
     <div layout="row" layout-align="start center">
       <md-input-container class="md-block reply-message">
