set a message to read after clicking it

--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -11,6 +11,10 @@
   box-shadow: 2px 2px 1px #c0c0c0;
 }
 
+.unread-msg {
+  background-color: rgb(255,215,64);
+}
+
 .msg-page {
   padding-top: 65px;
   padding-bottom: 100px;
