--- a/src/app/templates/message.html
+++ b/src/app/templates/message.html
@@ -3,14 +3,14 @@
     <md-subheader class="md-no-sticky">
       Messages
     </md-subheader>
-    <md-list-item class="md-3-line" ng-repeat-start='message in messages'>
+    <md-list-item class="md-3-line" ng-click='reply(message)' ng-class='{"unread-msg": !message.isRead}'  ng-repeat-start='message in messages'>
       <div class="md-list-item-text" layout="column">
         <h3>{{message.sender.name}}</h3>
         <h4>{{message.sentOn | date:'MM/dd/yyyy hh:mma'}}</h4>
         <p>{{message.message}}</p>
       </div>
     </md-list-item>
-    <md-button class="md-secondary" ng-click='reply(message)'>Reply</md-button>
+    
     <md-divider ng-repeat-end></md-divider>
   </md-content>
 </div>
